[gd_scene load_steps=6 format=2]

[ext_resource path="res://images/backgrounds/Background/BG Image.png" type="Texture" id=1]
[ext_resource path="res://images/backgrounds/Background/Big Clouds.png" type="Texture" id=2]
[ext_resource path="res://images/BALARILA.png" type="Texture" id=3]
[ext_resource path="res://images/backgrounds/Background/Small Cloud 1.png" type="Texture" id=4]
[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=5]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Back" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 426, 240 )

[node name="Back" type="Sprite" parent="ParallaxBackground/Back"]
position = Vector2( -7, -6.00002 )
scale = Vector2( 1.15365, 1.94531 )
texture = ExtResource( 1 )
centered = false

[node name="Cloud Big" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 426, 240 )

[node name="Big Clouds" type="Sprite" parent="ParallaxBackground/Cloud Big"]
position = Vector2( -10, -3 )
texture = ExtResource( 2 )
centered = false

[node name="Cloud Smol" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 426, 260 )

[node name="Small Cloud 1" type="Sprite" parent="ParallaxBackground/Cloud Smol"]
position = Vector2( 265, 94 )
texture = ExtResource( 4 )
centered = false

[node name="Play" type="Button" parent="."]
margin_left = 56.0
margin_top = 177.0
margin_right = 143.0
margin_bottom = 205.0
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Load" type="Button" parent="."]
margin_left = 176.0
margin_top = 177.0
margin_right = 263.0
margin_bottom = 205.0
text = "Load"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="."]
margin_left = 296.0
margin_top = 177.0
margin_right = 383.0
margin_bottom = 205.0
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BALARILA" type="Sprite" parent="."]
position = Vector2( 211, 91 )
scale = Vector2( 0.495049, 0.49505 )
texture = ExtResource( 3 )

[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Load" to="." method="_on_Load_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
